@@ -10,6 +10,8 @@
  - JLMs Reboot & FastBoot added.
  - fixed debug displays in 16-bit part.
  - fixed debug displays in Jemm16.asm, UnloadJemm.
+ - JemmEx: option NOE820 reintroduced; it's a noop unless MAXSEXT is 0.
+ - fixed option UNLOAD: on 80386/80486 cpus, it wasn't safe.
 
  10.01.2025: v5.85
  - fixed: VDS func ax=810Ch: set ZF if disable cnt reaches zero.
